# best-cs1230-final-project

./: CMakeLists.txt  README.md  submission-action.md  submission-lights-camera.md
FishGameClient/: README.md
FishGameClient/resources/shaders/: default.frag  (+3 more)
FishGameClient/src/: fish.h  fishingline.cpp  fishingline.h  fishingrod.h  mainwindow.cpp  mainwindow.h  particlegenerator.h  player.h  realtime.cpp  realtime.h
FishGameServer/: CMakeLists.txt  README.md  main.cpp  run_client.sh  run_server.sh
FishGameServer/include/: NetworksClient.h  TestClient.h  server.h
FishGameServer/src/: ClientMain.cpp  TestClient.cpp  server.cpp
lib/freetype/: INSTALL_RECEIPT.json  sbom.spdx.json
resources/shaders/: default.frag  default.vert  lab10.frag  particle.frag  particle.vert  postP.frag  textOverlay.frag  textOverlay.vert
scenes/: fish_game.json
src/: fish.cpp  fish.h  fishingline.cpp  fishingline.h  fishingrod.cpp  fishingrod.h  main.cpp  mainwindow.cpp  particlegenerator.cpp  particlegenerator.h  player.cpp  realtime.cpp  realtime.h  settings.h  timer.cpp  timer.h
src/models/: model-loader.cpp  model-loader.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
src/terrain/: braincoral.cpp  coral.h  genericcoral.cpp  genericcoral.h  tallcoral.h  terrain.cpp  terrain.h  terraingenerator.cpp  terraingenerator.h
src/utils/: networksclient.cpp  networksclient.h  objloader.cpp  objloader.h  openglhelper.cpp  openglhelper.h  paintglhelper.cpp  paintglhelper.h  sceneparser.cpp  sceneparser.h  serverupdate.h  utils.cpp
(+11 files in other folders)
